--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a href="#">portfolio</a>
                 <a href="#">Service</a>
                 <a href="#">Contact</a>
+                <a href="#">FAQ</a>
             </nav>
             
 
